syntax = "proto3";

option csharp_namespace = "UhlnocsServer";

package calculationProto;

service CalculationServiceProto {
  rpc StartLaunch (LaunchConfigurationMessage) returns (LaunchConfigurationMessage);
}

message CalculationEmptyMessage {

}

message LaunchConfigurationMessage {
    string launchConfigurationJson = 1;
}
